# pre-commit-hooks

./: .pre-commit-hooks.yaml  check_metadata.py  pre-commit-hooks.yaml  setup.cfg
hooks/: check_metadata.py
