[metadata]
name = pre_commit_hooks
version = 0.0.7
description = Some utility pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fdufault/pre-commit-hooks
author = Francis Dufault
author_email = francis.dufault@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.9.7

[options.packages.find]
include =
    hooks*

[options.entry_points]
console_scripts =
    check-metadata = hooks.check_metadata:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
